// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Creates changeview action for Inbox 1`] = `
Object {
  "payload": "Inbox",
  "type": "CHANGE_VIEW",
}
`;

exports[`Creates changeview action for Playlist 1`] = `
Object {
  "payload": "username",
  "type": "CHANGE_USERNAME",
}
`;

exports[`Creates changeview action for Playlist 2`] = `
Object {
  "payload": "password",
  "type": "CHANGE_USERNAME",
}
`;

exports[`reducer changes state and renders correctly 1`] = `
Object {
  "header": Object {
    "view": "Authentication",
  },
  "main": Object {
    "authView": "login",
    "email": "",
    "inbox": Object {},
    "inboxFilters": Object {
      "bookmarked": "bookmarkedOff",
      "liked": "likedOff",
      "playlist": "All",
      "tag": "All",
      "time": "timeOff",
    },
    "modalVisible": false,
    "password": "",
    "token": null,
    "username": "test",
    "view": "Authentication",
  },
  "player": Object {
    "currentEpisode": null,
    "currentEpisodeTitle": null,
    "currentPlayingTime": "0:00",
    "currentSoundInstance": null,
    "currentSpeed": 1,
    "isFullSizeModalVisible": false,
    "isModalVisible": false,
    "isPlaying": false,
    "timer": null,
  },
  "playlist": Object {
    "addNewPlaylistInputValue": "",
    "allplaylists": Array [],
    "isAddPlaylistModalVisible": false,
    "playlists": Array [],
    "selectedEpisodeId": null,
    "selectedPlaylistId": null,
  },
  "podcasts": Object {
    "currentPodcast": null,
    "episodesLoading": false,
    "iTunesResult": Array [],
    "podcastEpisodes": Array [],
    "searchSpinner": false,
    "searchText": "",
    "subscriptions": Array [],
  },
  "swipe": Object {
    "currentlyOpenSwipeable": null,
    "isLeftActionActivated": false,
    "isLeftToggled": false,
    "isRightActionActivated": false,
  },
}
`;

exports[`reducer changes state and renders correctly 2`] = `
Object {
  "header": Object {
    "view": "Authentication",
  },
  "main": Object {
    "authView": "login",
    "email": "",
    "inbox": Object {},
    "inboxFilters": Object {
      "bookmarked": "bookmarkedOff",
      "liked": "likedOff",
      "playlist": "All",
      "tag": "All",
      "time": "timeOff",
    },
    "modalVisible": false,
    "password": "",
    "token": null,
    "username": "username",
    "view": "Authentication",
  },
  "player": Object {
    "currentEpisode": null,
    "currentEpisodeTitle": null,
    "currentPlayingTime": "0:00",
    "currentSoundInstance": null,
    "currentSpeed": 1,
    "isFullSizeModalVisible": false,
    "isModalVisible": false,
    "isPlaying": false,
    "timer": null,
  },
  "playlist": Object {
    "addNewPlaylistInputValue": "",
    "allplaylists": Array [],
    "isAddPlaylistModalVisible": false,
    "playlists": Array [],
    "selectedEpisodeId": null,
    "selectedPlaylistId": null,
  },
  "podcasts": Object {
    "currentPodcast": null,
    "episodesLoading": false,
    "iTunesResult": Array [],
    "podcastEpisodes": Array [],
    "searchSpinner": false,
    "searchText": "",
    "subscriptions": Array [],
  },
  "swipe": Object {
    "currentlyOpenSwipeable": null,
    "isLeftActionActivated": false,
    "isLeftToggled": false,
    "isRightActionActivated": false,
  },
}
`;

exports[`reducer changes state and renders correctly 3`] = `
Object {
  "header": Object {
    "view": "Authentication",
  },
  "main": Object {
    "authView": "login",
    "email": "",
    "inbox": Object {},
    "inboxFilters": Object {
      "bookmarked": "bookmarkedOff",
      "liked": "likedOff",
      "playlist": "All",
      "tag": "All",
      "time": "timeOff",
    },
    "modalVisible": false,
    "password": "password",
    "token": null,
    "username": "",
    "view": "Authentication",
  },
  "player": Object {
    "currentEpisode": null,
    "currentEpisodeTitle": null,
    "currentPlayingTime": "0:00",
    "currentSoundInstance": null,
    "currentSpeed": 1,
    "isFullSizeModalVisible": false,
    "isModalVisible": false,
    "isPlaying": false,
    "timer": null,
  },
  "playlist": Object {
    "addNewPlaylistInputValue": "",
    "allplaylists": Array [],
    "isAddPlaylistModalVisible": false,
    "playlists": Array [],
    "selectedEpisodeId": null,
    "selectedPlaylistId": null,
  },
  "podcasts": Object {
    "currentPodcast": null,
    "episodesLoading": false,
    "iTunesResult": Array [],
    "podcastEpisodes": Array [],
    "searchSpinner": false,
    "searchText": "",
    "subscriptions": Array [],
  },
  "swipe": Object {
    "currentlyOpenSwipeable": null,
    "isLeftActionActivated": false,
    "isLeftToggled": false,
    "isRightActionActivated": false,
  },
}
`;

exports[`reducer returns default state and renders correctly 1`] = `
Object {
  "header": Object {
    "view": "Authentication",
  },
  "main": Object {
    "authView": "login",
    "email": "",
    "inbox": Object {},
    "inboxFilters": Object {
      "bookmarked": "bookmarkedOff",
      "liked": "likedOff",
      "playlist": "All",
      "tag": "All",
      "time": "timeOff",
    },
    "modalVisible": false,
    "password": "",
    "token": null,
    "username": "",
    "view": "Authentication",
  },
  "player": Object {
    "currentEpisode": null,
    "currentEpisodeTitle": null,
    "currentPlayingTime": "0:00",
    "currentSoundInstance": null,
    "currentSpeed": 1,
    "isFullSizeModalVisible": false,
    "isModalVisible": false,
    "isPlaying": false,
    "timer": null,
  },
  "playlist": Object {
    "addNewPlaylistInputValue": "",
    "allplaylists": Array [],
    "isAddPlaylistModalVisible": false,
    "playlists": Array [],
    "selectedEpisodeId": null,
    "selectedPlaylistId": null,
  },
  "podcasts": Object {
    "currentPodcast": null,
    "episodesLoading": false,
    "iTunesResult": Array [],
    "podcastEpisodes": Array [],
    "searchSpinner": false,
    "searchText": "",
    "subscriptions": Array [],
  },
  "swipe": Object {
    "currentlyOpenSwipeable": null,
    "isLeftActionActivated": false,
    "isLeftToggled": false,
    "isRightActionActivated": false,
  },
}
`;

exports[`renders correctly 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#ffffff",
      "justifyContent": "center",
      "marginTop": 50,
      "padding": 20,
    }
  }
>
  <View
    style={
      Object {
        "alignSelf": "center",
        "justifyContent": "center",
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "alignSelf": "center",
          "fontSize": 30,
          "fontWeight": "600",
          "marginBottom": 20,
        }
      }
    >
      Siren
    </Text>
  </View>
  <View
    style={
      Object {
        "alignSelf": "center",
        "justifyContent": "center",
        "marginBottom": 10,
      }
    }
  >
    <View
      style={undefined}
    >
      <TextInput
        autoCapitalize="none"
        onChangeText={[Function]}
        placeholder="Username"
        style={
          Object {
            "height": 44,
            "padding": 8,
            "width": 200,
          }
        }
        value=""
      />
      <TextInput
        autoCapitalize="none"
        onChangeText={[Function]}
        placeholder="Password"
        secureTextEntry={true}
        style={
          Object {
            "height": 44,
            "padding": 8,
            "width": 200,
          }
        }
        value=""
      />
    </View>
  </View>
  <View
    style={
      Object {
        "alignSelf": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
      }
    }
  >
    <View>
      <View
        accessibilityComponentType="button"
        accessibilityLabel={undefined}
        accessibilityTraits={
          Array [
            "button",
          ]
        }
        accessible={true}
        hitSlop={undefined}
        isTVSelectable={true}
        onLayout={undefined}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
        testID={undefined}
        tvParallaxProperties={undefined}
      >
        <View
          style={
            Array [
              Object {},
            ]
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "color": "#0C42FD",
                  "fontSize": 18,
                  "padding": 8,
                  "textAlign": "center",
                },
              ]
            }
          >
            Login
          </Text>
        </View>
      </View>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        onPress={[Function]}
        style={
          Object {
            "alignSelf": "stretch",
            "color": "grey",
            "fontSize": 16,
            "height": 36,
            "justifyContent": "center",
            "marginTop": 10,
          }
        }
      >
        Switch to signup
      </Text>
    </View>
  </View>
</View>
`;
